tests/positive/test_message.orb
import "util/print.orb";

fnc main () () {
    message 100;
    message 100:u16;
    message "abcd";

    message 200 200:u16 "abcd";

    message 300 (eval (block i32 {
        message "abcd";
        pass 300;
    }));

    message::warning 400;
};