tests/negative/test_eval_load_from_block_glob.orb
eval (fnc foo () () {
    = x 0;
});

eval (block b0 () {
    sym x:i32;
    foo;
});

fnc main () () {};